[FIX]Usability fix: reduced contrast for non-relevant information for end users in directory links
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/9.x@41625 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design.css
+++ b/styles/layout/design.css
@@ -1153,10 +1153,12 @@ textarea.tshoutbox{
 
 .dirsitetrail {
 	font-size: 95%;
+	color: lightgray;
 }
 
 .dirsitecats {
 	font-size: 95%;
+	color: lightgray;
 }
 
 /***** User Tasks *****/
